<resources>
    <string name="app_name">TravelApplication</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="notify">Notify</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Explore the beautiful world!</string>
    <string name="search">Search</string>
    <string name="search_button_description">Search button</string>
    <string name="booking_services">Booking Services</string>
    <string name="services_icon_description">Services icons</string>
    <string name="services_images">Services Images</string>
    <string name="booking_screen_title">Booking</string>
    <string name="default_title">Title</string>
    <string name="back_button_app_bar">Back</string>
    <string name="trips_booking">Trips</string>
    <string name="transport_booking_title">Transport Booking</string>
    <string name="button_switch_from_to_flight">Switch from to flight</string>
    <string name="from">From</string>
    <string name="new_york">New York (NYC)</string>
    <string name="london">London (LDN)</string>
    <string name="departure_text">Departure</string>
    <string name="June_02_2022">Jun 02, 2022</string>
    <string name="return_text">Return</string>
    <string name="June_12_2022">Jun 12, 2022</string>
    <string name="passenger_luggage_text">Passenger &amp; Luggage</string>
    <string name="number_1">1</string>
    <string name="number_0">0</string>
    <string name="class_text">Class</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="to_text">To</string>
    <string name="transport_text">Transport</string>
    <string name="transport_option_button">Transport option</string>
    <string name="flights_details_title">Flights</string>
    <string name="TH">TH</string>
    <string name="number_02">02</string>
    <string name="FR">FR</string>
    <string name="number_03">03</string>
    <string name="SA">SA</string>
    <string name="number_04">04</string>
    <string name="SU">SU</string>
    <string name="number_05">05</string>
    <string name="MO">MO</string>
    <string name="number_06">06</string>
    <string name="TU">TU</string>
    <string name="number_07">07</string>
    <string name="WE">WE</string>
    <string name="number_08">08</string>
    <string name="flights_available_text">6 flights available New York to London</string>
    <string name="filter_button">Filter button</string>
    <string name="new_york_shorthand">NYC</string>
    <string name="new_york_full">New York</string>
    <string name="london_shorthand">LDN</string>
    <string name="london_full">London</string>
    <string name="date_text">Date</string>
    <string name="june_02">02 Jun</string>
    <string name="nine_am">9:00 AM</string>
    <string name="price_text">Price</string>
    <string name="fifty_dollars">$50</string>
    <string name="number_text">Number</string>
    <string name="nl_41">NL-41</string>
    <string name="hotel">Hotel</string>
    <string name="events">Events</string>
    <string name="flights_filter_title">Filter</string>
    <string name="_12am_06am">12AM - 06AM</string>
    <string name="_6am_12pm">6AM - 12PM</string>
    <string name="_12pm_6pm">12PM - 6PM</string>
    <string name="_6pm_12am">6PM - 12AM</string>
    <string name="arrival_text">Arrival</string>
    <string name="_250_dollars">$250</string>
    <string name="sort_by">Sort by</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
    <string name="duration_text">Duration</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="select_seats">Select Seats</string>
    <string name="traveller">Traveller</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="number_7">7</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="your_seats">Your seats</string>
    <string name="traveller_1_seat_2a">Traveller 1 / Seat 2A</string>
    <string name="total_price">Total price</string>
    <string name="fifty_dollars_seat">$50.00</string>
    <string name="continue_text">Continue</string>
    <string name="seat_status_info">Seat status info</string>
    <string name="seat_row_numbers">Seat row numbers</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="ticket_divider">Ticket divider</string>
    <string name="boarding_pass_plane">Boarding pass plane</string>
    <string name="british_air_nl_41">British Airways Flight NL-41</string>
    <string name="passenger">Passenger</string>
    <string name="one_adult">1 Adult</string>
    <string name="ticket">Ticket</string>
    <string name="nl_82_1">NL82-1</string>
    <string name="seat">Seat</string>
    <string name="two_a">2A</string>
    <string name="download_ticket">Download ticket</string>
    <string name="dollar_sign">$</string>
    <string name="fifty">50</string>
    <string name="_250">250</string>
    <string name="_7D">7D</string>
    <string name="_6D">6D</string>
    <string name="avatar">Avatar</string>
    <string name="victoria_yo">Victoria Yoker</string>
    <string name="personal_info">Personal Information</string>
    <string name="payment_and_cards">Payment and Cards</string>
    <string name="saved">Saved</string>
    <string name="booking_history">Booking history</string>
    <string name="settings">Settings</string>
    <string name="end_session_icon">End session icon</string>
    <string name="end_session">End session</string>
    <string name="camera_button">Camera Button</string>
    <string name="first_name">First name</string>
    <string name="victoria">Victoria</string>
    <string name="last_name">Last name</string>
    <string name="yoker">Yoker</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="samplePhoneNumber">"+380 12 345 67 89 "</string>
    <string name="sampleEmailAddress">victoria.yoker@gmail.com</string>
    <string name="save_changes">Save changes</string>
    <string name="all">All</string>
    <string name="fifty_decimal">50.00</string>
    <string name="_250_decimal">250.00</string>
    <string name="personal_info_text">Personal information</string>
    <string name="payment_and_cards_text">Payment and cards</string>
    <string name="booking_history_text">Booking history</string>
</resources>