<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PersonalInfoFragment">

    <!--Top App Bar -->
    <RelativeLayout
        android:id="@+id/personalInfoAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/personalInfo_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button_app_bar"
            android:backgroundTint="@color/screen"
            android:src="@drawable/ic_chevron"/>

        <TextView
            android:id="@+id/personalInfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_info"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/title" />
    </RelativeLayout>

    <!--Content field -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personalInfoAppBar"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:id="@+id/personalInfo_content_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Avatar Field -->
            <FrameLayout
                android:id="@+id/personalInfo_avatar_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/personalInfo_avatar_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatar_personal_info"
                    android:contentDescription="@string/avatar"/>
                <ImageButton
                    android:id="@+id/camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_button"
                    android:contentDescription="@string/camera_button"
                    android:background="@android:color/transparent"
                    android:layout_gravity="bottom|end"/>
            </FrameLayout>

            <!--First name Field -->
            <LinearLayout
                android:id="@+id/first_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personalInfo_avatar_field"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/person_info_edit_field">

                <TextView
                    android:id="@+id/first_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="10sp"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="@font/poppins_medium"/>

                <EditText
                    android:id="@+id/first_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/first_name"
                    android:text="@string/victoria"
                    android:textSize="15sp"
                    android:textColor="@color/text_primary"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <!--Last name Field -->
            <LinearLayout
                android:id="@+id/last_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_field"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/person_info_edit_field">

                <TextView
                    android:id="@+id/last_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="10sp"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="@font/poppins_medium"/>

                <EditText
                    android:id="@+id/last_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:text="@string/yoker"
                    android:textSize="15sp"
                    android:textColor="@color/text_primary"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <!--Phone Field -->
            <LinearLayout
                android:id="@+id/phone_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_field"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/person_info_edit_field">

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="10sp"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="@font/poppins_medium"/>

                <EditText
                    android:id="@+id/phone_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:text="@string/samplePhoneNumber"
                    android:textSize="15sp"
                    android:textColor="@color/text_primary"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <!--Email Field -->
            <LinearLayout
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_field"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/person_info_edit_field">

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="10sp"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="@font/poppins_medium"/>

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:text="@string/sampleEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/text_primary"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <!--Save changes button -->
            <Button
                android:id="@+id/save_changes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                android:background="@drawable/ticket_search_button" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>